--- a/css/style.css
+++ b/css/style.css
@@ -136,13 +136,13 @@ nav li:first-child::after {
   left: 10%;
 }
 
-#main-contents div {
+#main-contents > div {
   width: 100%;
   background-color: #fff;
   border-radius: 10px;
 }
 
-#main-contents div .content-area {
+#main-contents > div .content-area {
   padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -173,6 +173,34 @@ nav li:first-child::after {
 #main-contents aside img {
   width: 100%;
   border-radius: 10px;
+}
+
+#main-contents aside #overlay {
+  z-index: 99;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#main-contents aside #overlay #overlay-content {
+  z-index: 100;
+  width: 64%;
+}
+
+#main-contents aside #overlay #overlay-content p {
+  background-color: #eee;
 }
 
 #main-contents article {
