--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,8 @@
+// @mixin 
+
+$main-color: #E9C46A;
+
+// end @mixin
 // CSS modules
 .text-center {
   text-align: center;
@@ -10,8 +15,6 @@
 // end CSS modules
 
 // base style CSS 
-$main-color: #E9C46A;
-
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -133,7 +136,7 @@ nav {
     top: 2rem;
     left: 10%;
   }
-  div {
+  &>div {
     width: 100%;
     background-color: #fff;
     border-radius: 10px;
@@ -161,6 +164,25 @@ nav {
     img {
       width: 100%;
       border-radius: 10px;
+    }
+    #overlay {
+      z-index: 99;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      #overlay-content {
+        z-index: 100;
+        width: 64%;
+        p {
+          background-color: #eee;
+        }
+      }
     }
   }
   // end carrer
