--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,10 @@
   text-align: center;
 }
 
-.flex-between {
+.flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 * {
@@ -73,6 +70,12 @@ nav {
   padding: 2rem 0;
 }
 
+nav ul {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 nav li {
   font-size: 1.6rem;
   width: calc(100% / 3);
@@ -113,8 +116,21 @@ nav li:first-child::after {
           font-feature-settings: 'liga';
 }
 
+#click-suggest {
+  opacity: 0;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
 #click-suggest li {
   width: calc(100% / 3);
+}
+
+#click-suggest li i {
+  -webkit-transition: 1.2s;
+  transition: 1.2s;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 #click-suggest p {
@@ -154,15 +170,22 @@ nav li:first-child::after {
       flex-wrap: wrap;
 }
 
-#main-contents table {
+#main-contents .component > h1 {
+  padding: 1.6rem;
+  font-size: 1.6rem;
+  font-weight: bolder;
+  color: #264653;
+}
+
+#main-contents dl {
   width: 70%;
 }
 
-#main-contents table td:nth-child(2) {
+#main-contents dl td:nth-child(2) {
   text-align: center;
 }
 
-#main-contents table tr {
+#main-contents dl dt {
   border-bottom: 1px solid #264653;
 }
 
