--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ header {
   font-family: Bernard MT Condensed;
   font-size: 5.6rem;
   color: #2A9D8F;
-  text-shadow: 1px 5px #FF7777;
+  text-shadow: 1px 3px #FF7777;
 }
 
 #who {
@@ -137,6 +137,12 @@ nav li:first-child::after {
   color: #fff;
   font-size: 2.4rem;
   letter-spacing: 3px;
+}
+
+.move {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 0;
 }
 
 #main-contents {
