--- a/css/style.scss
+++ b/css/style.scss
@@ -56,7 +56,7 @@ header {
   font-family: Bernard MT Condensed;
   font-size: 5.6rem;
   color: #2A9D8F;
-  text-shadow: 1px 5px #FF7777;
+  text-shadow: 1px 3px #FF7777;
 }
 
 #who {
@@ -139,6 +139,10 @@ nav {
   }
 }
 
+.move {
+  transition: 0.3s;
+  opacity: 0;
+}
 #main-contents {
   margin: 3rem 2rem 0;
   position: relative;
