--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,17 @@ header {
 
 #when {
   font-family: Bernard MT Condensed;
+  width: 30%;
+  margin-left: auto;
   text-align: right;
-  font-size: 1.6rem;
-  padding-right: 3rem;
+  font-size: 1.4rem;
+  padding-top: 1rem;
+  padding-right: 2.4rem;
   color: #2A9D8F;
+}
+
+.text-wrap {
+  display: inline-block;
 }
 
 nav {
@@ -142,9 +149,6 @@ nav li:first-child::after {
 #main-contents {
   margin: 3rem 2rem 3rem;
   font-size: 1.6rem;
-}
-
-#main-contents i {
   color: #fff;
 }
 
