--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,10 @@
 }
 
 .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -60,7 +57,7 @@ header {
 
 #when {
   font-family: Bernard MT Condensed;
-  width: 30%;
+  width: 40%;
   margin-left: auto;
   text-align: right;
   font-size: 1.4rem;
@@ -80,9 +77,7 @@ nav {
 }
 
 nav ul {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 nav li {
@@ -121,8 +116,7 @@ nav li:first-child::after {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-feature-settings: 'liga';
-          font-feature-settings: 'liga';
+  font-feature-settings: 'liga';
 }
 
 #click-suggest li {
@@ -131,10 +125,8 @@ nav li:first-child::after {
 
 #click-suggest li i {
   opacity: 0;
-  -webkit-transition: 2s;
   transition: 2s;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 #click-suggest p {
@@ -142,7 +134,6 @@ nav li:first-child::after {
   font-size: 2.4rem;
   letter-spacing: 3px;
   opacity: 0;
-  -webkit-transition: 2s;
   transition: 2s;
 }
 
@@ -153,7 +144,7 @@ nav li:first-child::after {
 
 #main-contents > div {
   width: 100%;
-  background-color: #fff;
+  background-color: #f5f5f5;
   border-radius: 10px;
 }
 
@@ -163,14 +154,9 @@ nav li:first-child::after {
 
 @media (min-width: 479px) {
   #main-contents > div .content-area {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 1rem;
   }
 }
@@ -182,28 +168,40 @@ nav li:first-child::after {
   color: #264653;
 }
 
-#main-contents dl {
-  width: 70%;
+@media (min-width: 479px) {
+  #main-contents #carrer-component #carrer-header {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
 
-#main-contents dl td:nth-child(2) {
+#main-contents #carrer-component dl {
+  width: 100%;
+}
+
+#main-contents #carrer-component dl td:nth-child(2) {
   text-align: center;
 }
 
-#main-contents dl dt {
+#main-contents #carrer-component dl dt {
   border-bottom: 1px solid #264653;
 }
 
-#main-contents aside {
-  width: 30%;
-}
-
-#main-contents aside img {
+#main-contents #carrer-component aside img {
   width: 100%;
-  border-radius: 10px;
 }
 
-#main-contents aside #overlay {
+@media (min-width: 479px) {
+  #main-contents #carrer-component aside {
+    width: 30%;
+  }
+  #main-contents #carrer-component aside img {
+    width: 100%;
+    border-radius: 10px;
+  }
+}
+
+#main-contents #carrer-component aside #overlay {
   z-index: 99;
   position: fixed;
   top: 0;
@@ -211,23 +209,17 @@ nav li:first-child::after {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
-#main-contents aside #overlay #overlay-content {
+#main-contents #carrer-component aside #overlay #overlay-content {
   z-index: 100;
   width: 64%;
 }
 
-#main-contents aside #overlay #overlay-content p {
+#main-contents #carrer-component aside #overlay #overlay-content p {
   background-color: #eee;
 }
 
@@ -263,8 +255,6 @@ nav li:first-child::after {
 }
 
 #main-contents #works-component article:last-child {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  justify-content: start;
 }
 /*# sourceMappingURL=style.css.map */
