--- a/css/style.scss
+++ b/css/style.scss
@@ -75,7 +75,7 @@ header {
 
 #when {
   font-family: Bernard MT Condensed;
-  width: 30%;
+  width: 40%;
   margin-left: auto;
   text-align: right;
   font-size: 1.4rem;
@@ -160,15 +160,13 @@ nav {
 #main-contents {
   margin: 3rem 2rem 3rem;
   font-size: 1.6rem;
-
   &>div {
     width: 100%;
-    background-color: #fff;
+    background-color: #f5f5f5;
     border-radius: 10px;
 
     .content-area {
       margin: 0 auto;
-      // text-align: center;
 
       @include sm {
         display: flex;
@@ -188,51 +186,60 @@ nav {
   }
 
   // for carrer
-
-  dl {
-    width: 70%;
-
-    td:nth-child(2) {
-      text-align: center;
+  #carrer-component {
+    #carrer-header {
+      @include sm {
+        display: flex;
+        justify-content: space-evenly;
+      }
     }
-
-    dt {
-      border-bottom: 1px solid #264653;
-    }
-  }
-
-  aside {
-    width: 30%;
-
-    // background-color: #2A9D8F;
-    img {
+    dl {
       width: 100%;
-      border-radius: 10px;
+
+      td:nth-child(2) {
+        text-align: center;
+      }
+
+      dt {
+        border-bottom: 1px solid #264653;
+      }
     }
 
-    #overlay {
-      z-index: 99;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    aside {
+      img {
+        width: 100%;
+      }
+      @include sm {
+        width: 30%;
+        img {
+          width: 100%;
+          border-radius: 10px;
+        }
+       }
 
-      #overlay-content {
-        z-index: 100;
-        width: 64%;
+      #overlay {
+        z-index: 99;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        p {
-          background-color: #eee;
+        #overlay-content {
+          z-index: 100;
+          width: 64%;
+
+          p {
+            background-color: #eee;
+          }
         }
       }
     }
   }
-
   // end carrer
 
   // for works
@@ -259,6 +266,7 @@ nav {
         width: 50%;
         img {
           width: 80%;
+
         }
       }
      
@@ -267,6 +275,5 @@ nav {
         ;
       }
     }
-    // 
   }
 }
