--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,12 @@ nav li:first-child::after {
   border-bottom: 1px solid #264653;
 }
 
+@media (min-width: 479px) {
+  #main-contents #carrer-component #skill-graph {
+    position: relative;
+  }
+}
+
 #main-contents #carrer-component aside img {
   width: 100%;
 }
@@ -199,28 +205,6 @@ nav li:first-child::after {
     width: 100%;
     border-radius: 10px;
   }
-}
-
-#main-contents #carrer-component aside #overlay {
-  z-index: 99;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#main-contents #carrer-component aside #overlay #overlay-content {
-  z-index: 100;
-  width: 64%;
-}
-
-#main-contents #carrer-component aside #overlay #overlay-content p {
-  background-color: #eee;
 }
 
 #main-contents #works-component article {
