Improve: ロード時にアイコンが文字として表示されていた問題の修正

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -37,7 +37,7 @@ a {
 body {
   margin: 0;
   background-color: #264653e3;
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
