--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,3 @@
-$main-color: #e9c46a;
-
 .text-center {
   text-align: center;
 }
@@ -22,7 +20,7 @@ $main-color: #e9c46a;
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
 }
 
 li {
@@ -36,8 +34,9 @@ a {
 
 body {
   margin: 0;
-  background-color: #264653e3;
   font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+  min-height: 100vh;
+  background: linear-gradient(#264653e3,30%, #152b35e3);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -49,9 +48,9 @@ body {
 }
 
 header {
-  padding-top: 7rem;
-  padding-bottom: 2rem;
+  height: 16rem;
   background-color: $main-color;
+  position: relative;
 }
 
 #what {
@@ -59,6 +58,10 @@ header {
   font-size: 5.6rem;
   color: #2a9d8f;
   text-shadow: 1px 3px #ff7777;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #who {
@@ -87,7 +90,7 @@ header {
 
 .material-icons {
   font-family: "Material Icons";
-  font-size: 7rem;
+  font-size: 5rem;
   color: $main-color;
   display: block;
   line-height: 1;
@@ -95,10 +98,13 @@ header {
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   font-feature-settings: "liga";
+  @include md {
+    font-size: 7rem;
+  }
 }
 
 #main-contents {
-  margin: 3rem 2rem 3rem;
+  margin: 1rem 2rem 3rem;
   font-size: 1.6rem;
   & > div {
     width: 100%;
@@ -111,9 +117,8 @@ header {
     h2 {
       font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
-      font-size: 1.8rem;
+      font-size: 2rem;
       text-align: center;
-      margin-bottom: 1.5rem;
     }
   }
 
