--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,6 @@
+@import "../../assets/sass/_mixin";
+@import "../../assets/sass/variable";
+
 .text-center {
   text-align: center;
 }
@@ -35,7 +38,7 @@ a {
 body {
   margin: 0;
   min-height: 100vh;
-  background: linear-gradient(#264653e3,30%, #152b35e3);
+  background: linear-gradient(#264653e3, 30%, #152b35e3);
   font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans",
     "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
   -webkit-font-smoothing: antialiased;
