Update: スタイルの修正

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -43,6 +43,7 @@ body {
     "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $main-black;
 }
 
 // end base style CSS
