--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -37,7 +37,6 @@ a {
 
 body {
   margin: 0;
-  min-height: 100vh;
   background: linear-gradient(#264653e3, 30%, #152b35e3);
   font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans",
     "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
@@ -49,13 +48,33 @@ body {
 // end base style CSS
 
 #container {
+  min-height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+main {
+  flex-grow: 1;
+}
+header,
+main,
+footer {
+  flex-shrink: 0;
 }
 
 header {
   height: 16rem;
   background-color: $main-color;
   position: relative;
+}
+
+footer {
+  font-size: 1.6rem;
+  color: $main-color;
+  text-align: center;
+  padding-bottom: 1rem;
 }
 
 #what {
