--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,5 @@
-@import "../../assets/sass/_mixin";
-@import "../../assets/sass/variable";
+@import "@/assets/sass/_mixin";
+@import "@/assets/sass/_variable";
 
 .text-center {
   text-align: center;
