Revert "Fix: パスの記述を修正"
This reverts commit d3a5930866788b8f28b0468aaab350edc67f873d.

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,5 @@
-@import "@/assets/sass/_mixin";
-@import "@/assets/sass/_variable";
+@import "../../assets/sass/_mixin";
+@import "../../assets/sass/variable";
 
 .text-center {
   text-align: center;
